--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
     <property name="source" value="1.6"/>
     <path id="GLIProtoServer.classpath">
         <pathelement location="bin"/>
-        <pathelement location="../../code/JavaProtoBufferExampleServerApp/protobuf-java-2.4.1.jar"/>
+        <pathelement location="./protobuf-java-2.4.1.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
